# doccano-client

./: pyproject.toml
doccano_client/: client.py
doccano_client/models/: comment.py  example.py  label.py  label_type.py  member.py  project.py  user_details.py
doccano_client/repositories/: comment.py  data_download.py  data_upload.py  example.py  label.py  label_type.py  member.py  project.py  role.py  task_status.py  user.py  user_details.py
doccano_client/usecase/: project.py  user_details.py
tests/integration/repositories/: test_project.py
tests/unit/usecase/: test_comment.py  test_example.py  test_label_type.py  test_project.py
