[project]
name = "doccano-client"
version = "1.2.8"
description = "A simple client for doccano API."
authors = [{ name = "Hironsan", email = "hiroki.nakayama.py@gmail.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "requests>=2.28.1,<3",
    "dataclasses-json>=0.5.7,<0.6",
    "pydantic>=2.0.0",
    "requests-toolbelt>=1.0.0",
    "pyyaml!=5.4.0,!=5.4.1,!=6.0.0",
]

[project.optional-dependencies]
spacy = [
    "spacy>=3.4.1,<4",
    "spacy-partial-tagger>=0.9.1,<0.10",
    "tqdm>=4.64.1,<5",
]
whisper = ["ffmpeg-python>=0.2.0,<0.3", "tqdm>=4.64.1,<5"]
al = ["spacy>=3.4.1,<4", "seqal>=0.3.4,<0.4", "pandas>=1.5.1,<2"]

[project.urls]
Homepage = "https://github.com/doccano/doccano-client"
Repository = "https://github.com/doccano/doccano-client"

[project.scripts]
docli = "doccano_client.cli.commands:main"

[dependency-groups]
dev = [
    "flake8>=5.0.4,<6",
    "isort>=5.10.1,<6",
    "mypy>=0.971,<0.972",
    "darglint>=1.8.1,<2",
    "black>=22.8.0,<23",
    "responses>=0.21.0,<0.22",
    "types-requests>=2.28.10,<3",
    "pytest>=7.1.3,<8",
    "pyproject-flake8>=5.0.4,<6",
    "taskipy>=1.10.3,<2",
    "mkdocs>=1.3.1,<2",
    "mkdocs-material>=8.5.3,<9",
    "mkdocs-same-dir>=0.1.1,<0.2",
    "vcrpy>=5.0.0",
    "mkdocstrings[python, crystal]>=0.19.0,<0.20",
]

[tool.hatch.build.targets.sdist]
include = ["doccano_client"]

[tool.hatch.build.targets.wheel]
include = ["doccano_client"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 120
max-complexity = 18
ignore = "E203,E266,W503"
filename = "*.py"
exclude = ".git,__pycache__,docs,build,dist,doccano_client/beta"

[tool.isort]
profile = "black"
include_trailing_comma = true
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
show_error_codes = true
exclude = ['doccano_client/beta']

[tool.taskipy.tasks]
isort = "isort . -c"
flake8 = "pflake8 doccano_client"
black = "black --check ."
darglint = "darglint"
mypy = "mypy doccano_client"
test = "python -m pytest"
